Added theme support